--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -23,6 +23,27 @@ body {
 .zone-content{
 	margin-top:30px;
 }
+
+
+/* ========== LOGO ========== */
+
+.region-branding {
+display: block;
+width: 353px;
+height: 137px;
+text-indent: -9999px;
+background: transparent url("/sites/all/themes/lynchburg/images/logo.png") no-repeat top center;
+margin:-30px 0 0 0;
+}
+
+.region-branding a{
+display: block;
+width: 100%;
+height: 100%;
+outline: none;
+}
+
+
 /* ========== LIST STYLES ========== */
 ol, ul {
 	list-style: none;
